grammar.js
    source_file: ($) =>
      seq(
        field('version', optional($.version)),
        field('language', optional($.langdecl)),
        field('definitions', listWithSeparator($.definition, '\n')),
        optional(field('pattern', $._pattern)),
        field('definitions', listWithSeparator($.definition, '\n')),
      ),

    definition: ($) =>
      choice(
        field('pattern', $.patternDefinition),
        field('predicate', $.predicateDefinition),
        field('function', $.functionDefinition),
        field('foreign', $.foreignFunctionDefinition),
      ),

    _pattern: ($) =>
      prec(
        PREC.PATTERN,
        choice(
          $._literal,
          $.patternNot,
          $.patternOr,
          $.patternOrElse,
          $.patternAny,
          $.patternAnd,
          $.patternMaybe,
          $.patternIfElse,
          $.patternContains,
          $.patternIncludes,
          $.patternAfter,
          $.patternBefore,
          $.within,
          $.bubble,
          $.nodeLike,
          $.mapAccessor,
          $.listIndex,
          $.dot,
          $.some,
          $.every,
          $.underscore,
          $.variable,
          $.regexPattern,
          $.patternAs,
          $.patternLimit,
          $.assignmentAsPattern,
          $.patternAccumulate,
          $.rewrite,
          $.like,
          $.log,
          $.range,
          $.patternWhere,
          $.mulOperation,
          $.divOperation,
          $.modOperation,
          $.addOperation,
          $.subOperation,
          $.sequential,
          $.files,
          seq('(', $._pattern, ')'),
        ),
      ),

    rewrite: ($) =>
      prec.right(
        PREC.REWRITE,
        seq(
          field('left', $._pattern),
          field('annotation', optional($.annotation)),
          '=>',
          field('right', $._pattern),
        ),
      ),

    // --- conditional pattern ------------
    nodeLike: ($) =>
      seq(field('name', $.name), seq('(', field('named_args', commaSep($.namedArg)), ')')),

    patternDefinitionBody: ($) => seq('{', field('patterns', commaSep($._pattern)), '}'),

    patternDefinition: ($) =>
      seq(
        field('visibility', optional('private')),
        // space here is kind of gross, but lets us differentiate from pattern() nodelike
        'pattern ',
        field('name', $.name),
        seq('(', field('args', commaSep($.variable)), ')'),
        field('language', optional($.langdecl)),
        field('body', $.patternDefinitionBody),
      ),

    noBraces: (_$) =>
      /(?:"(?:[^"\\]|\\.)*")|(?:'(?:[^'\\]|\\.)*')|(?:`(?:[^`\\]|\\.)*`)|([^{}"`'\r\n]+)/,

    foreignLanguageCode: ($) =>
      repeat1(choice($.noBraces, $.comment, seq('{', $.foreignLanguageCode, '}'))),

    foreignFunctionBody: ($) => seq('{', field('code', $.foreignLanguageCode), '}'),

    foreignFunctionDefinition: ($) =>
      seq(
        // space here is kind of gross, but lets us differentiate from function() nodelike
        'function ',
        field('name', $.name),
        seq('(', field('args', commaSep($.variable)), ')'),
        field('language', $.foreignLanguageName),
        field('body', $.foreignFunctionBody),
      ),

    name: (_$) => /[\^#A-Za-z_][A-Za-z0-9_]*/,

    // These are languages that you can write foreign functions in
    foreignLanguageName: (_$) => choice('js'),

    // These are target languages
    backtickSnippet: (_$) => /`(?:[^`\\]|\\\$|\\\\|\\`|\\n)*`/,

    codeSnippet: ($) =>
      seq(
        field('source', choice($.backtickSnippet, $.languageSpecificSnippet, $.rawBacktickSnippet)),
      ),
